--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ ul {
 	overflow: hidden;
 }
 .container {
-	width: 1158px;
+	width: 100%;
 	padding: 0 15px;
 	margin: 0 auto;
 }
@@ -81,7 +81,7 @@ ul {
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 }
-.logo span {
+.logo-desc {
 	color: var(--primary-color);
 }
 /* Navigation */
@@ -226,133 +226,9 @@ ul {
 	text-align: center;
 	text-transform: capitalize;
 }
-.section-title {
-	margin-bottom: 8px;
 
-	color: var(--primary-color);
-
-	font-weight: 500;
-	font-size: 20px;
-	line-height: 1.2;
-	letter-spacing: 0.02em;
-}
-.section-text {
-	color: var(--primary-text-color);
-
-	font-size: 16px;
-	line-height: 1.5;
-	letter-spacing: 0.02em;
-}
-/* Feature section */
-.section {
-	padding-top: 120px;
-}
-.feature-list {
-	display: flex;
-	gap: 24px;
-}
-.feature-item {
-	width: 264px;
-}
-.feature-icon-container {
-	display: flex;
-	margin-bottom: 8px;
-	justify-content: center;
-	align-items: center;
-	height: 112px;
-
-	background-color: var(--light-brand);
-}
-/* Picture section */
-.picture-section {
-	padding-top: 120px;
-	padding-bottom: 120px;
-}
-.picture-list {
-	display: flex;
-	gap: 24px;
-}
-/* Team section */
-.team-section {
-	padding: 120px 0;
-
-	background-color: var(--light-brand);
-}
-.team-container {
-	padding: 32px 16px;
-	min-width: 232px;
-	text-align: center;
-}
-.team-container .section-title {
-	margin-bottom: 8px;
-}
-.team-list {
-	display: flex;
-	gap: 24px;
-}
-.team-item {
-	background-color: var(--light-brand);
-
-	background: var(--white-color);
-	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-	border-radius: 0px 0px 4px 4px;
-}
-.social-media-list {
-	display: flex;
-	gap: 24px;
-	margin-top: 8px;
-}
-.social-media-link {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 12px;
-	width: 100%;
-	height: 100%;
-
-	background-color: var(--primary-brand);
-	border-radius: 50%;
-	background-size: 40px;
-	transition-property: background;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-media-link:hover,
-.social-media-link:focus {
-	background-color: var(--accent-color);
-}
-/* Customers */
-.section-customers {
-	padding-top: 130px;
-	padding-bottom: 120px;
-}
-.customers-list {
-	display: flex;
-	gap: 24px;
-}
-.customers-link {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 168px;
-	height: 88px;
-
-	border: 1px solid currentColor;
-	border-radius: 4px;
-	color: var(--subtle-text);
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.customers-icon {
-	fill: currentColor;
-}
-.customers-link:hover,
-.customers-link:focus {
-	color: var(--accent-color);
-}
 /* Footer */
-.footer {
+/* .footer {
 	background-color: var(--primary-color);
 	padding: 100px 0;
 }
@@ -454,7 +330,7 @@ ul {
 }
 .footer-icon {
 	margin-left: 16px;
-}
+} */
 /* ----------PORTFOLIO--------- */
 .portfolio {
 	padding-top: 96px;
@@ -551,7 +427,7 @@ ul {
 	margin-bottom: 8px;
 }
 /* Footer portfolio */
-span.logo-desc {
+.footer-logo-desc {
 	color: var(--light-brand);
 }
 .footer-text {
@@ -780,4 +656,12 @@ span.logo-desc {
 .form-btn:hover,
 .form-btn:focus {
 	background-color: var(--accent-color);
+}
+@media screen and (max-width: 1157px) {
+	.feature-icon-container {
+		display: none;
+	}
+	.picture-section {
+		display: none;
+	}
 }
