--- a/css/tablet.css
+++ b/css/tablet.css
@@ -15,6 +15,175 @@
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 }
+.logo {
+	padding: 24px 0;
+	margin-right: 76px;
+
+	color: var(--primary-brand);
+
+	font-family: "Raleway";
+	font-weight: 800;
+	font-size: 18px;
+	line-height: 1.33;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+}
+.logo-desc {
+	color: var(--primary-color);
+}
+
+.page-header {
+	border-bottom: 1px solid var(--light-text-color);
+	box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.container.header {
+	display: flex;
+	align-items: center;
+}
+.header-nav {
+	display: flex;
+}
+.header-list {
+	display: flex;
+}
+.header-list .header-item:not(:last-child) {
+	margin-right: 40px;
+}
+.header-link {
+	position: relative;
+	display: block;
+	padding: 24px 0;
+
+	color: var(--primary-color);
+
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	transition-property: color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-link:hover,
+.header-link:focus {
+	color: var(--accent-color);
+}
+.header-link.active {
+	color: var(--accent-color);
+}
+.header-link.active::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -1px;
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+	background-color: var(--accent-color);
+}
+.mob-menu-btn {
+	display: none;
+}
+.contacts {
+	margin-left: auto;
+}
+
+.contacts-mail,
+.contacts-tel {
+	display: block;
+
+	color: var(--primary-text-color);
+
+	font-style: normal;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	transition-property: color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-mail {
+	margin-bottom: 6px;
+}
+.contacts-mail:hover,
+.contacts-mail:focus,
+.contacts-tel:hover,
+.contacts-tel:focus {
+	color: var(--accent-color);
+}
+.hero-section {
+	max-width: 768px;
+	height: 436px;
+	padding: 108px 0;
+	margin-right: auto;
+	margin-left: auto;
+
+	background-color: var(--primary-color);
+	background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+		url(../images/hero-bg-tab.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	text-align: center;
+}
+@media screen and (min-device-pixel-ratio: 2),
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 192dpi),
+	(min-resolution: 2dppx) {
+	.hero-section {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url("../images/hero-bg-tab-2x.jpg");
+	}
+}
+.mobile-menu {
+	display: block;
+}
+.close-button.menu {
+	display: none;
+}
+.menu-header-list {
+	display: none;
+}
+.menu-contacts {
+	display: none;
+}
+.social-media-list.menu {
+	display: none;
+}
+.hero-title {
+	margin: 0 auto 40px;
+	width: 496px;
+
+	color: var(--white-color);
+
+	font-weight: 700;
+	font-style: normal;
+	font-size: 56px;
+	line-height: 1.07;
+	letter-spacing: 0.02em;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.hero-button {
+	padding: 16px 32px;
+	margin: 0 auto;
+
+	color: var(--white-color);
+	background-color: var(--primary-brand);
+
+	font-family: inherit;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	transition-property: background;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero-button:hover,
+.hero-button:focus {
+	background-color: var(--accent-color);
+}
 .feature-section {
 	padding: 96px 0;
 }
