--- a/css/mobile.css
+++ b/css/mobile.css
@@ -78,6 +78,9 @@
 	padding-top: 80px;
 	padding-bottom: 40px;
 	padding-left: 40px;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
 .menu-header-link {
 	display: block;
@@ -99,6 +102,9 @@
 .menu-header-link:focus {
 	color: var(--accent-color);
 }
+.menu-contacts {
+	margin-top: auto;
+}
 .menu-contacts-mail,
 .menu-contacts-tel {
 	display: block;
@@ -112,7 +118,6 @@
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-contacts-tel {
-	margin-top: 284px;
 	margin-bottom: 40px;
 	font-weight: 700;
 	font-size: 36px;
@@ -154,7 +159,7 @@
 }
 .hero-title {
 	margin: 0 auto 72px;
-	width: 320px;
+	max-width: 320px;
 
 	color: var(--white-color);
 
@@ -190,13 +195,9 @@
 	padding: 96px 0;
 }
 .container {
-	min-width: 426px;
+	width: 428px;
 }
-.feature-item {
-	width: 396px;
-	margin-right: auto;
-	margin-left: auto;
-}
+
 .feature-item:not(:last-child) {
 	margin-bottom: 72px;
 }
@@ -264,14 +265,10 @@
 	padding: 96px 0;
 }
 .customers-list {
-	width: 396px;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 72px 16px;
-	margin-right: auto;
-	margin-left: auto;
 	justify-content: center;
-	align-items: center;
 }
 .customers-link {
 	display: flex;
@@ -362,18 +359,14 @@
 .footer-link:focus {
 	background-color: var(--success);
 }
-.footer-form-container {
-	width: 398px;
-	margin-right: auto;
-	margin-left: auto;
-}
+
 .footer-input {
 	margin-right: auto;
 	margin-left: auto;
 	margin-bottom: 16px;
 	padding-left: 16px;
 
-	width: 398px;
+	width: 100%;
 	height: 40px;
 
 	color: var(--white-color);
@@ -423,4 +416,32 @@
 }
 .footer-icon {
 	margin-left: 16px;
+}
+.modal {
+	width: 392px;
+	height: 586px;
+	padding-left: 16px;
+	padding-right: 16px;
+}
+@media screen and (max-width: 427px) {
+	.container {
+		width: 100%;
+	}
+	.social-media-list.menu {
+		gap: 35px;
+	}
+	/* .modal {
+		width: 310px;
+		height: 586px;
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+	.form-label-checkbox {
+		font-size: 10px;
+	}
+	.form-btn {
+		width: 100px;
+		padding: 10px 32px;
+		font-size: 14px;
+	} */
 }
