--- a/css/tablet.css
+++ b/css/tablet.css
@@ -95,9 +95,9 @@
 	color: var(--primary-text-color);
 
 	font-style: normal;
-	font-size: 16px;
-	line-height: 1.5;
-	letter-spacing: 0.02em;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
 	transition-property: color;
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -188,7 +188,7 @@
 	padding: 96px 0;
 }
 .container {
-	min-width: 766px;
+	width: 766px;
 }
 .feature-list {
 	display: flex;
