--- a/css/desktop.css
+++ b/css/desktop.css
@@ -3,9 +3,6 @@
 	font-size: 20px;
 	line-height: 1.2;
 }
-.section-text {
-	font-weight: 400;
-}
 .contacts-list {
 	display: flex;
 }
@@ -15,6 +12,7 @@
 .contacts-mail,
 .contacts-tel {
 	padding: 24px 0;
+	font-size: 16px;
 }
 .contacts-mail {
 	margin-bottom: 0;
@@ -61,7 +59,6 @@
 	background-color: var(--light-brand);
 }
 .picture-section {
-	padding-top: 120px;
 	padding-bottom: 120px;
 }
 .picture-list {
@@ -77,7 +74,6 @@
 	gap: 24px;
 	width: 100%;
 	justify-content: center;
-	align-items: center;
 }
 .section-customers {
 	padding: 120px 0;
@@ -85,8 +81,6 @@
 .customers-list {
 	width: 100%;
 	gap: 24px;
-	justify-content: center;
-	align-items: center;
 }
 .footer {
 	background-color: var(--primary-color);
@@ -102,6 +96,12 @@
 	gap: 120px;
 	margin-right: 80px;
 	margin-left: auto;
+}
+.footer-social-container {
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 0;
 }
 .footer-title {
 	color: var(--white-color);
@@ -121,11 +121,9 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	padding: 8px;
 
 	background: rgba(255, 255, 255, 0.1);
 	border-radius: 50%;
-	background-size: 40px;
 	transition-property: background;
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -197,4 +195,14 @@
 }
 .footer-icon {
 	margin-left: 16px;
+}
+.portfolio {
+	padding-top: 96px;
+	padding-bottom: 120px;
+}
+.list.buttons {
+	margin-bottom: 72px;
+}
+.portfolio-list {
+	gap: 48px 24px;
 }
