--- a/css/mobile.css
+++ b/css/mobile.css
@@ -74,6 +74,7 @@
 	visibility: visible;
 }
 .mob-menu-container {
+	margin: auto;
 	position: relative;
 	padding-top: 80px;
 	padding-bottom: 40px;
@@ -418,10 +419,110 @@
 	margin-left: 16px;
 }
 .modal {
-	width: 392px;
-	height: 586px;
+	width: 95%;
+	max-width: 392px;
+	height: 95%;
+	max-height: 586px;
+	overflow: scroll;
+}
+.portfolio {
+	padding: 48px 0;
+}
+.list.buttons {
+	margin-bottom: 48px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 16px 24px;
+
+	text-align: center;
+}
+.portfolio-button {
+	padding: 8px 16px;
+
+	color: var(--primary-brand);
+	background-color: var(--light-brand);
+
+	font-family: inherit;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	border: 1px solid var(--light-text-color);
+	transition-property: color, background, border, box-shadow;
+	transition-duration: 250ms, 250ms, 250ms, 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1),
+		cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-button:hover,
+.portfolio-button:focus {
+	color: var(--white-color);
+	background-color: var(--primary-brand);
+	border: 1px solid var(--accent-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio-item:not(:last-child) {
+	margin-bottom: 48px;
+}
+.portfolio-link {
+	display: block;
+	transition-property: box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+	-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+.portfolio-link:hover .portfolio-desc-overlay,
+.portfolio-link:focus .portfolio-desc-overlay {
+	transform: translateY(0);
+}
+.portfolio-wrap {
+	position: relative;
+	overflow: hidden;
+}
+.portfolio-desc-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	padding: 40px 32px;
+	width: 100%;
+	height: 100%;
+
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+
+	color: #f4f4fd;
+	background-color: var(--primary-brand);
+	transform: translateY(100%);
+	transition-property: transform;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	overflow: auto;
+}
+.portfolio-container {
+	padding: 32px 0;
 	padding-left: 16px;
-	padding-right: 16px;
+
+	background: var(--white-color);
+
+	border: 1px solid var(--light-text-color);
+	border-top: 0;
+}
+.portfolio-container > .section-title {
+	margin-bottom: 8px;
+
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 1.2;
+	text-align: left;
+}
+.portfolio-container > .section-text {
+	font-weight: 400;
 }
 @media screen and (max-width: 427px) {
 	.container {
@@ -430,18 +531,4 @@
 	.social-media-list.menu {
 		gap: 35px;
 	}
-	/* .modal {
-		width: 310px;
-		height: 586px;
-		padding-left: 8px;
-		padding-right: 8px;
-	}
-	.form-label-checkbox {
-		font-size: 10px;
-	}
-	.form-btn {
-		width: 100px;
-		padding: 10px 32px;
-		font-size: 14px;
-	} */
 }
